<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exercise_name"/>

        <AutoCompleteTextView
            android:id="@+id/edit_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_exercise_name"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sets"/>

        <EditText
            android:id="@+id/edit_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_sets"
            android:inputType="phone"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_repss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reps"/>

        <EditText
            android:id="@+id/edit_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_reps"
            android:inputType="phone"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_did_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_did_pass"/>

        <CheckBox
            android:id="@+id/check_did_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_exercise_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exercise_date"/>

       <TextView
           android:id="@+id/value_exercise_date"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_date"
            android:onClick="showDatePickerDialog"/>


    </LinearLayout>


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>